--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.0.0",
 		"@types/bcrypt": "^5.0.0",
 		"@types/cookie": "^0.5.1",
+		"@types/ip": "^1.1.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"sass": "^1.57.1",
@@ -25,8 +26,7 @@
 		"svelte-fa": "^3.0.3",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"@types/ip": "^1.1.0"
+		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
